--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">UILayoutTest</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_text_view_test">TextViewTestActivity</string>
+    <string name="hello">TextViewTestActivity</string>
 
 </resources>
